--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         hola
+        <input type="button" value="Aceptar">
+        <input type="text">
     </body>
 </html>
